<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    tools:context=".Cadastro1">

    <TextView
        android:id="@+id/preencha"
        android:layout_width="316dp"
        android:layout_height="97dp"
        android:layout_marginTop="88dp"
        android:fontFamily="monospace"
        android:text="@string/preencha_seus_dados"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/gray_cad"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:hint="@string/nome_completo"
        android:textColorHint="@color/gray_cad"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preencha"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/cpf"
        android:textColorHint="@color/gray_cad"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/celular"
        android:textColorHint="@color/gray_cad"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cpf"
        android:importantForAutofill="no"
        android:inputType="phone"/>

    <Button
        android:id="@+id/botao"
        android:text="@string/avan_ar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:color="@color/green_button"
        android:radius="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>