<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingTop="16dp"
        android:paddingEnd="50dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="Estamos quase finalizando..."
            android:textAlignment="center"
            android:textColor="@color/text_color_gray"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:textColorHint="@color/text_color_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_cadastro_campo_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color_gray"
                android:textColorHint="@color/text_color_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:textColorHint="@color/text_color_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_cadastro_campo_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColor="@color/text_color_gray"
                android:textColorHint="@color/text_color_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:textColorHint="@color/text_color_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_cadastro_campo_repetir_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_2"
                android:inputType="textPassword"
                android:textColor="@color/text_color_gray"
                android:textColorHint="@color/text_color_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/item_cadastro_btn_finalizarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/green_button"
            android:backgroundTint="@color/green_button"
            android:onClick="validateCadastroUser"
            android:text="@string/finalizar"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>